# simd_sort

./: .gitignore  Cargo.toml
benches/: sort_bench.rs
src/: main.rs
