[package]
name = "simd_sort"
version = "0.1.0"
authors = ["Hendrik Appel <hendrik.appel@worldprogramming.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.bench]
lto = true

[lib]
name = "simd_sort"
path = "src/main.rs"

[dependencies]
rand = "0.3"
packed_simd = "0.3.3"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "sort_bench"
harness = false